fix: Make content display correctly on small views

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,9 @@ main {
 }
 
 article {
-  height: 100vh;
+  display: block;
+  overflow:auto;
+  min-height: 100vh;
 }
 
 @keyframes App-logo-spin {
